# rag-arxiv-retrieval

./: .dockerignore  .gitignore  Dockerfile  api.py  build_eval.py  build_eval_extra.py  chunk_size_experiment.py  chunker.py  docker-compose.yml  dockerfile  eval_harness.py  eval_set.json  generator.py  ingest.py  latex_retriever.py  main.py  metadata_fetcher.py  migration.py  mise.toml  nearest_neighbours.py  pyproject.toml  requirements.txt  test_query.py
static/: index.html  logs.html
