[project]
name = "rag-arxiv-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "arxiv-to-prompt>=0.11.1",
    "fastapi>=0.135.1",
    "openai>=2.32.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "sentence-transformers>=5.3.0",
]
